# Scene-detection

./: CMakeLists.txt  README.md  main.cpp
detection/: detection.cpp
test/: main.cpp
